tests/ui/const-generics/issues/issue-99641.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-99641.rs:5:35
   |
LL |     pub struct Color<const WHITE: (fn(),)>;
   |                                   ^^^^^^^

error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-99641.rs:8:23
   |
LL |     impl<const WHITE: (fn(),)> Color<WHITE> {
   |                       ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0741`.
